fix horizontal scrolling

--- a/src/client/App.less
+++ b/src/client/App.less
@@ -44,31 +44,21 @@ body {
     }
 }
 
-.clientId {
-    margin: 4px;
+#topDiv {
+    width: 1296px;
+    margin: auto;
+    margin-top: 0;
 }
 
-#mainBoards {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+.clientId {
+    margin: 4px;
 }
 
 .boardRow {
     display: flex;
     justify-content: center;
-}
-
-#rightBoards {
-    justify-content: space-around;
-}
-
-.boards {
-    display: flex;
-    flex-direction: column;
-    flex-shrink: 0;
-    transition: all 0.5s ease;
-    align-content: center;
+    width: 1296px;
+    margin: auto;
 }
 
 .board {
